[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["penguinshunya <penguinshunya@hotmail.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/penguinshunya/hello-wasm"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
